--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "@redis/client": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
