--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@redis/client": "^1.6.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "node-cron": "^3.0.3",
